[package]
name = "dclone-relay"
version = "0.1.0"
edition = "2021"
description = "DClone relay server — circuit relay v2, rendezvous, identify, ping"

[[bin]]
name = "dclone-relay"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.53", features = [
    "tcp", "quic", "noise", "yamux", "macros", "tokio",
    "relay", "rendezvous", "identify", "ping", "kad"
] }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
